--- a/src/app/layout/footer/footer/footer.component.html
+++ b/src/app/layout/footer/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="footer-top-section">
 
     <div class="footer-item item-introduction">
-      <div class="footer-item-title">introduction</div>
+      <div class="footer-item-title">developer</div>
       <p>
         <img
           class="introduction-img"
