--- a/src/app/layout/page-introduction/page-introduction/page-introduction.component.html
+++ b/src/app/layout/page-introduction/page-introduction/page-introduction.component.html
@@ -1,4 +1,9 @@
 <div id="page-instroduction" class="page-instroduction">
+
+  <div class="current-weather-container" title="Current Weather">
+      <div class="weather-icon"><i class="bi bi-cloud-sun-fill"></i></div>
+      <div class="weather-text">22°C</div>
+  </div>
   <div class="call-to-acltion-container">
 
     <div class="intro-text">
