--- a/src/app/features/skills-set/pages/skills-set/skills-set.component.html
+++ b/src/app/features/skills-set/pages/skills-set/skills-set.component.html
@@ -55,14 +55,14 @@
     <div class="set-container">
       <div class="heading">ide & tools</div>
       <div class="set">
-        <span class="skill"><i class="bi bi-flask"></i> VS Code</span>
-        <span class="skill"><i class="bi bi-flask"></i> Angular CLI</span>
-        <span class="skill"><i class="bi bi-flask"></i> DevTool</span>
-        <span class="skill"><i class="bi bi-flask"></i> Postman</span>
+        <span class="skill"><i class="bi bi-app-indicator"></i> VS Code</span>
+        <span class="skill"><i class="bi bi-app-indicator"></i> Angular CLI</span>
+        <span class="skill"><i class="bi bi-app-indicator"></i> DevTool</span>
+        <span class="skill"><i class="bi bi-app-indicator"></i> Postman</span>
         <span class="skill"
-          ><i class="bi bi-flask"></i> Karma & Jasmine</span
+          ><i class="bi bi-app-indicator"></i> Karma & Jasmine</span
         >
-        <span class="skill"><i class="bi bi-flask"></i> Git bash</span>
+        <span class="skill"><i class="bi bi-app-indicator"></i> Git bash</span>
       </div>
       <div class="btn-container">
         <div name="explore" class="explore" (click)="redirectToProjects()">explore projects</div>
