--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -4,6 +4,7 @@
     display: grid;
     grid-template-columns: 1fr;
     row-gap: 20px;
+    margin-bottom: 15px;
 
     //hr line styles
     @include page-content-intro-hr;
