--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -3,7 +3,7 @@
 #home-page-main {
     display: grid;
     grid-template-rows: 1fr;
-    row-gap: 15px;
+    row-gap: 25px;
 
     //cards section
     .cards-container {
@@ -34,7 +34,7 @@
                     width: 40px;
 
                     color: $light-neutral-font-color;
-                    background-color: $light-dark-bg-color;
+                    background-color: $dark-primary-bg-color;
                     padding: 11px 13px;
 
                 }
@@ -48,17 +48,16 @@
 
             .card-button {
                 .explore {
-
                     // background-color: #ff8fab;
-                    background-color: red;
-                    min-width: 100px;
-                    padding: 5px 20px;
+                    background-color: $error-color;
+                    width: 100%;
+                    padding: 7px 20px;
                     text-transform: uppercase;
                     color: $light-neutral-font-color;
                     cursor: pointer;
                     border: none;
                     border-radius: $spacing-xs;
-                    font-size: $font-size-xs;
+                    font-size: $font-size-xs + 2px;
                 }
             }
 
@@ -80,151 +79,65 @@
     @include page-content-intro-hr;
 
     //features section
-    .feeds-container {
-        display: grid;
-        grid-template-columns: 7fr 4fr;
-        // padding: 0 $spacing-md;
-        column-gap: 15px;
+    .intro-container {
+        padding: 0 10% 15px;
+        border-radius: $spacing-sm;
+        text-align: center;
+        margin-top: -10px;
 
-        .recent-project-container {
-            display: grid;
-            grid-template-columns: 1fr;
-            row-gap: 8px;
-            text-align: left;
-            padding: $spacing-sm;
-            box-shadow: $light-box-shadow;
-            border-radius: $spacing-xs;
+        .developer-name {
+            font-size: $font-size-lg + 8px;
+            font-weight: bold;
+        }
 
-            .details-heading {
-                .heading {
-                    @include heading-light;
-                }
-            }
+        .developer-title {
+            text-transform: uppercase;
+            font-size: $font-size-md + 2px;
+            font-family: 50;
+        }
 
-            .recent-project-details {
-                display: grid;
-                grid-template-columns: 1fr 4fr;
-                column-gap: 15px;
+        p {
+            margin: 15px 0;
+            font-size: $font-size-md;
+            line-height: 1.6;
 
-                .recent-project-img {
-                    cursor: pointer;
-
-                    .project-img {
-                        height: 120px;
-                        border-radius: $spacing-xs;
-                    }
-                }
-
-                .project-details {
-                    display: flex;
-                    flex-direction: column;
-
-                    .details {
-                        text-align: left;
-                    }
-
-                    .heading {
-                        text-transform: uppercase;
-                        background-color: $light-primary-bg-color;
-                        border-radius: 0 $spacing-xs $spacing-xs 0;
-                        border-left: 5px solid red;
-                        padding: $spacing-xs $spacing-sm;
-                        cursor: pointer;
-                    }
-
-                    .project-description {
-                        font-size: $font-size-sm;
-
-                        .description {
-                            padding: $spacing-sm;
-                        }
-
-                        .online-options {
-                            display: flex;
-                            flex-direction: row;
-                            column-gap: 10px;
-                            flex-wrap: wrap;
-
-                            .online {
-                                @include button;
-                            }
-                        }
-                    }
-                }
+            .highlight {
+                font-weight: bold;
+                color: $comp-default-font-color;
             }
         }
 
-        .news-feed-container {
+        .intro-btn-container {
+            text-align: center;
+            margin-top: 15px;
             display: flex;
-            flex-direction: column;
-            text-align: left;
-            row-gap: 8px;
+            flex-direction: row;
+            column-gap: 15px;
+            justify-content: center;
 
-            padding: $spacing-sm;
-            box-shadow: $light-box-shadow;
-            border-radius: $spacing-xs;
-
-            .heading {
-                @include heading-light;
-            }
-
-            .news-container {
-                display: grid;
-                grid-template-columns: 1fr 1fr 1fr;
-                column-gap: 8px;
+            .intro-btn {
+                padding: 6px 25px;
+                max-width: 240px;
+                border: none;
                 border-radius: $spacing-xs;
+                color: $light-neutral-font-color;
+                cursor: pointer;
 
-                .news {
-                    cursor: pointer;
-
-                    .news-img {
-                        height: 70px;
-                        width: 100%;
-                        border-radius: $spacing-xs;
-                    }
-
-                    .news-headline {
-                        text-transform: uppercase;
-                        font-size: $font-size-sm - 4px;
-                        font-weight: bold;
-                        background-color: $light-secondery-bg-color;
-                        border-radius: $spacing-xs - 1px;
-                        padding: $spacing-xs $spacing-xs $spacing-xs $spacing-sm;
-
-                        &:hover {
-                            background-color: red;
-                            color: #fff;
-                        }
-                    }
-                }
-            }
-
-            .weather-container {
-                display: inline;
-                // height: 26px;
-                padding: $spacing-xs - 1px;
-                padding-left: $spacing-xs + 1px;
-                background-color: $light-primary-bg-color;
-                border-radius: $spacing-xs;
-                font-size: $font-size-sm;
-                color: $comp-default-font-color;
-                // text-align: center;
-
-                .weather-item {
-                    margin-right: 5px;
-                    font-size: $font-size-sm ;
-
-                    &.title {
-                        display: none;
-                        font-weight: bold;
-                        text-transform: uppercase;
-                    }
-
-                    &.more-news {
-                        color: $error-color;
-                    }
+                &.projects-btn {
+                    background-color: $error-color;
                 }
 
+                &.gitHub-btn {
+                    background-color: $dark-secondery-bg-color;
+                }
+
+                &.linkedin-btn {
+                    background-color: $dark-primary-bg-color;
+                }
+
+                &:hover {
+                    background-color: $comp-default-font-color;
+                }
             }
         }
     }
@@ -233,7 +146,7 @@
     @include respond-to("md") {
 
         //features section
-        .feeds-container {
+        .intro-container {
             .news-feed-container {
                 .news-container {
                     .news {
@@ -288,7 +201,7 @@
         }
 
         //features section
-        .feeds-container {
+        .intro-container {
             grid-template-columns: 1fr;
             row-gap: 20px;
 
@@ -329,7 +242,7 @@
         }
 
         //features section
-        .feeds-container {
+        .intro-container {
             .news-feed-container {
                 .news-container {
                     .news {
@@ -363,7 +276,9 @@
         }
 
         //features section
-        .feeds-container {
+        .intro-container {
+            padding: 0 5% 15px;
+
             .recent-project-container {
                 .recent-project-details {
                     .project-details {
@@ -371,30 +286,6 @@
                             font-size: $font-size-sm;
                         }
                     }
-                }
-            }
-
-            .news-feed-container {
-                row-gap: 10px;
-
-                .news-container {
-                    column-gap: 25px;
-
-                    .news {
-                        .news-img {
-                            height: 100px;
-                        }
-                    }
-                }
-
-                .weather-container {
-                    display: inline;
-
-                    .weather-item {
-                        margin-right: 5px;
-
-                    }
-
                 }
             }
         }
@@ -420,7 +311,7 @@
                         width: 40px;
 
                         color: $light-neutral-font-color;
-                        background-color: $light-dark-bg-color;
+                        background-color: intro-container$dark-primary-bg-color;
                         padding: 10px 12px;
 
                     }
@@ -443,182 +334,31 @@
         }
 
         //features section
-        .feeds-container {
-            padding: 0;
-            row-gap: 15px;
+        .intro-container {
+            padding: 0 5%;
 
-            .feed {
-                padding: $spacing-sm + 2px;
-                border-radius: $spacing-xs;
-            }
-
-            .recent-project-container {
-                .recent-project-details {
-                    display: grid;
-                    grid-template-columns: 1fr;
-                    column-gap: 15px;
-
-                    .recent-project-img {
-                        display: none;
-                    }
-
-                    .project-details {
-                        .project-description {
-                            font-size: $font-size-md;
-                        }
-                    }
-                }
-            }
-
-            .news-feed-container {
-                .news-container {
-                    .news {
-                        .news-img {
-                            height: 85px;
-                        }
-
-                        .news-headline {
-                            font-size: $font-size-sm - 3px;
-                            font-weight: normal;
-                        }
-                    }
-                }
-
-                .weather-container {
-                    .weather-item {
-                        margin-right: 0px;
-                    }
-                }
-            }
         }
     }
 
     @include respond-to("xs") {
 
-        .cards-container {
-
-            grid-template-columns: 1fr 1fr;
-            gap: 8px;
-            justify-content: space-between;
-
-            .card {
-                font-size: $font-size-sm;
-
-                .card-description {
-                    min-height: 20%;
-                    display: none;
-                }
-
-                &.card-git {
-                    display: block;
-                    display: flex;
-                    flex-direction: column;
-                    row-gap: 8px;
-                }
-            }
+        .cards-container,
+        .page-content-intro-hr {
+            display: none;
         }
 
         //features section
-        .feeds-container {
+        .intro-container {
+            margin-top: 0;
+            padding: $spacing-sm ;
 
-            .recent-project-container {
-                .details-heading {
-                    .heading {
-                        text-align: center;
-                    }
-                }
+            .intro-btn-container {
+                column-gap: 10px;
 
-                .recent-project-details {
-                    grid-template-columns: 1fr;
-                    row-gap: 5px;
+                .intro-btn {
+                    padding: 6px 15px;
+                    max-width: 200px;
 
-                    .recent-project-img {
-                        display: block;
-
-                        img {
-                            min-height: 225px;
-                            max-width: 100%;
-                        }
-                    }
-
-                    .project-details {
-
-                        .heading {
-                            border: none;
-                            border-radius: $spacing-xs;
-                            text-align: center;
-                        }
-
-                        .project-description {
-                            font-size: $font-size-md;
-                            text-align: center;
-
-                            .online-options {
-                                justify-content: center;
-                            }
-                        }
-                    }
-                }
-            }
-
-            .news-feed-container {
-
-                &.feed {
-                    .heading {
-                        text-align: center;
-                    }
-                }
-
-                .news-container {
-                    column-gap: 10px;
-
-                    .news {
-                        .news-img {
-                            height: 70px;
-                        }
-
-                        .news-headline {
-                            font-size: $font-size-xs - 2px;
-                            text-align: center;
-                        }
-                    }
-                }
-
-                .weather-container {
-                    .weather-item {
-                        margin-right: 0px;
-                        font-size: $font-size-sm;
-
-                        &.title {
-                            display: none;
-                        }
-                    }
-                }
-            }
-        }
-    }
-
-    @include respond-to("pre-xs") {
-
-        //features section
-        .feeds-container {
-
-            .recent-project-container {
-                .recent-project-details {
-                    .recent-project-img {
-                        display: block;
-
-                        img {
-                            min-height: 188px;
-                            width: 100%;
-                        }
-                    }
-
-                    .project-details {
-                        .project-description {
-                            font-size: $font-size-md;
-                        }
-                    }
                 }
             }
         }
