--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -4,6 +4,7 @@
     display: grid;
     grid-template-columns: 1fr;
     row-gap: 20px;
+    margin-bottom: 15px;
 
     //hr line styles
     @include page-content-intro-hr;
@@ -14,6 +15,7 @@
         padding: $spacing-lg $spacing-sm;
         box-shadow: $light-box-shadow;
         border-radius: $spacing-xs;
+         margin-bottom: 15px;
 
         .details-container {
             text-align: left;
@@ -65,12 +67,12 @@
                     cursor: pointer;
 
                     img {
-                        height: 125px;
+                        height: 128px;
                     }
                 }
 
                 .project-description {
-                     font-size: $font-size-md;
+                    font-size: $font-size-sm + 2px;
 
                     .project-views {
                         display: flex;
@@ -82,7 +84,7 @@
                         margin-left: $spacing-sm;
 
                         .view {
-                          @include button;
+                            @include button;
                         }
 
                     }
@@ -90,7 +92,8 @@
             }
 
             .top-right-details {
-                     font-size: $font-size-md;
+                font-size: $font-size-md;
+
                 .details {
                     border-left: 5px solid red;
                     padding: 0 $spacing-sm;
@@ -185,7 +188,7 @@
 
                     .git-hub-repo {
                         // color: #000;
-                        background-color: $light-dark-bg-color;
+                        background-color: $dark-primary-bg-color;
                     }
 
                     .live-site {
@@ -279,7 +282,7 @@
 
                         .git-hub-repo {
                             // color: #000;
-                            background-color: $light-dark-bg-color;
+                            background-color: $dark-primary-bg-color;
                         }
 
                         .live-site {
@@ -335,8 +338,9 @@
                 .project-details-container {
                     .project-view-btns {
                         column-gap: 10px;
+
                         .git-hub-repo {
-                            background-color: $light-dark-bg-color;
+                            background-color: $dark-primary-bg-color;
                         }
 
                         .details {
@@ -442,7 +446,7 @@
                         }
 
                         .git-hub-repo {
-                            background-color: $light-dark-bg-color;
+                            background-color: $dark-primary-bg-color;
                         }
 
                         .live-site {
