--- a/src/styles/pages/_skills-set.scss
+++ b/src/styles/pages/_skills-set.scss
@@ -1,10 +1,10 @@
 @use 'abstracts' as *;
 
 #skils-set-page-main {
-
     display: grid;
     grid-template-columns: 1fr;
     row-gap: 20px;
+        margin-bottom: 15px;
 
     //hr line styles
     @include page-content-intro-hr;
