--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -335,7 +335,7 @@
 
         //features section
         .intro-container {
-            padding: 0 5%;
+             padding: $spacing-sm ;
 
         }
     }
